added jpa to query builder

--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>query-builder-core</module>
+		<module>query-builder-jpa</module>
 	</modules>
 
 	<dependencies>
