added mongodb to query builder

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<modules>
 		<module>query-builder-core</module>
 		<module>query-builder-jpa</module>
+		<module>query-builder-mongodb</module>
 	</modules>
 
 	<dependencies>
