--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,35 @@
 	<artifactId>query-builder</artifactId>
 	<version>1.0</version>
 	<packaging>pom</packaging>
+	<name>Query Builder</name>
+	<description>A library for abstracting the creation of queries for various databases</description>
+	<url>https://github.com/gregmarut/query-builder</url>
+
 	<modules>
 		<module>query-builder-core</module>
 		<module>query-builder-jpa</module>
 		<module>query-builder-mongodb</module>
 	</modules>
+
+	<licenses>
+		<license>
+			<name>MIT</name>
+			<url>https://opensource.org/license/mit</url>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/gregmarut/query-builder</url>
+		<connection>scm:git:https://github.com/gregmarut/query-builder.git</connection>
+		<developerConnection>scm:git:https://github.com/gregmarut/query-builder.git</developerConnection>
+	</scm>
+
+	<developers>
+		<developer>
+			<name>Greg Marut</name>
+			<email>greg.marut@gmail.com</email>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
@@ -25,4 +49,62 @@
 			<version>3.0.2</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.7.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>3.2.4</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.3.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<failOnError>false</failOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
