--- a/pom.xml
+++ b/pom.xml
@@ -1,124 +1,123 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.gregmarut.querybuilder</groupId>
-    <artifactId>query-builder</artifactId>
-    <version>1.0.6</version>
-    <packaging>pom</packaging>
-    <name>Query Builder</name>
-    <description>A library for abstracting the creation of queries for various databases</description>
-    <url>https://github.com/gregmarut/query-builder</url>
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.gregmarut.querybuilder</groupId>
+	<artifactId>query-builder</artifactId>
+	<version>1.0.6</version>
+	<packaging>pom</packaging>
+	<name>Query Builder</name>
+	<description>A library for abstracting the creation of queries for various databases</description>
+	<url>https://github.com/gregmarut/query-builder</url>
 
-    <modules>
-        <module>query-builder-core</module>
-        <module>query-builder-jpa</module>
-        <module>query-builder-mongodb</module>
-        <module>neo4j-sdnmodelgen</module>
-        <module>mongodb-sdnmodelgen</module>
+	<modules>
+		<module>query-builder-core</module>
+		<module>query-builder-jpa</module>
+		<module>query-builder-mongodb</module>
+		<module>neo4j-sdnmodelgen</module>
+		<module>mongodb-sdnmodelgen</module>
 		<module>query-builder-cypher</module>
 		<module>query-builder-sdn</module>
 	</modules>
 
-    <licenses>
-        <license>
-            <name>MIT</name>
-            <url>https://opensource.org/license/mit</url>
-        </license>
-    </licenses>
+	<licenses>
+		<license>
+			<name>MIT</name>
+			<url>https://opensource.org/license/mit</url>
+		</license>
+	</licenses>
 
-    <scm>
-        <url>https://github.com/gregmarut/query-builder</url>
-        <connection>scm:git:https://github.com/gregmarut/query-builder.git</connection>
-        <developerConnection>scm:git:https://github.com/gregmarut/query-builder.git</developerConnection>
-    </scm>
+	<scm>
+		<url>https://github.com/gregmarut/query-builder</url>
+		<connection>scm:git:https://github.com/gregmarut/query-builder.git</connection>
+		<developerConnection>scm:git:https://github.com/gregmarut/query-builder.git</developerConnection>
+	</scm>
 
-    <developers>
-        <developer>
-            <name>Greg Marut</name>
-            <email>greg.marut@gmail.com</email>
-        </developer>
-    </developers>
+	<developers>
+		<developer>
+			<name>Greg Marut</name>
+			<email>greg.marut@gmail.com</email>
+		</developer>
+	</developers>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <optional>true</optional>
-            <version>1.18.30</version>
-        </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+			<version>1.18.30</version>
+		</dependency>
 
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>3.0.2</version>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+	</dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.7.0</version>
-                <extensions>true</extensions>
-                <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>3.3.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <failOnError>false</failOnError>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>attach-javadocs</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.sonatype.central</groupId>
+				<artifactId>central-publishing-maven-plugin</artifactId>
+				<version>0.8.0</version>
+				<extensions>true</extensions>
+				<configuration>
+					<publishingServerId>central</publishingServerId>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.3.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<failOnError>false</failOnError>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
-    <profiles>
-        <profile>
-            <id>sign</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>3.2.4</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+	<profiles>
+		<profile>
+			<id>sign</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>3.2.4</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
