--- a/mongodb-sdnmodelgen/pom.xml
+++ b/mongodb-sdnmodelgen/pom.xml
@@ -9,6 +9,7 @@
         <version>1.0.6</version>
     </parent>
 
+	<name>MongoDB Spring Data Neo4j Model Generator</name>
     <artifactId>mongodb-sdnmodelgen</artifactId>
 
     <properties>
