--- a/query-builder-core/pom.xml
+++ b/query-builder-core/pom.xml
@@ -9,6 +9,7 @@
 		<version>1.0.6</version>
 	</parent>
 
+	<name>Query Builder Core</name>
 	<artifactId>query-builder-core</artifactId>
 
 	<properties>
