--- a/query-builder-mongodb/pom.xml
+++ b/query-builder-mongodb/pom.xml
@@ -9,6 +9,7 @@
 		<version>1.0.6</version>
 	</parent>
 
+	<name>Query Builder MongoDB</name>
 	<artifactId>query-builder-mongodb</artifactId>
 
 	<properties>
